# Arykul_pomiary_nuromorfika

./: CMakeLists.txt  backend.cpp  backend.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qplot.cpp  qplot.hpp  res.qrc
